fix: set failureTime at injection time in UI
Fix T_bascule showing 0 ms when failover is too fast:
- UI now sets failureTime when injecting failure, not when receiving errors
- This matches proxy behavior (tFail set at injection time)
- Prevents T_bascule = 0 when monitoring detects failure before UI receives errors

Issue: When proxy monitoring detects and recovers very quickly (< 500ms),
UI requests may only see 200 responses from spare, never triggering the
error-based failureTime detection. Now failureTime is always set at
injection time, ensuring T_bascule is always calculated correctly.

--- a/public/test-client.html
+++ b/public/test-client.html
@@ -672,13 +672,16 @@
       async function triggerFailure(runId) {
         if (!isRunning || runId !== activeRunId) return;
 
+        // Set failureTime BEFORE injecting, like the proxy does
+        failureTime = Date.now();
+        log(`💥 Failure injected on primary (timeout mode)`, "warning");
+
         try {
           const res = await fetch(`${BASE_URL}/inject-failure`, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ mode: "timeout" }),
           });
-          log(`💥 Failure injected on primary (timeout mode)`, "warning");
         } catch (error) {
           log(`Unable to inject failure: ${error.message}`, "error");
         }
