Harmonize burst logic between terminal and UI load tests
- Modified loadtest/spam.js to use burst logic (5 requests per burst)
- Updated test-client.html to use same burst configuration
- Both now send requests at ~25 req/sec (5 requests every 100-300ms)
- Configuration: MIN_INTERVAL_MS=100, MAX_INTERVAL_MS=300, REQUESTS_PER_BURST=5

--- a/public/test-client.html
+++ b/public/test-client.html
@@ -578,7 +578,7 @@
 
       const MIN_INTERVAL_MS = 100;
       const MAX_INTERVAL_MS = 300;
-      const REQUESTS_PER_BURST = 3;
+      const REQUESTS_PER_BURST = 5;     // 3 → 5 for 25 req/sec
       const TEST_DURATION_MS = 30000;
       const FAILURE_DELAY_MS = 20000;
 
